--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+node_modules/
+/test-results/
+/test-screenshots/
+/playwright-report/
+/screenshots/
+.env
+.auth
+/lighthouse-report/
 # Logs
 logs
 *.log
@@ -137,3 +145,9 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
