--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,20 +13,41 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test-name: [login, cart, login-data-driven, performance-test]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+    - name: Cache Playwright Browsers
+      uses: actions/cache@v4
+      with:
+          path: ~/.cache/ms-playwright
+          key: playwright-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            playwright-${{ runner.os }}-
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v4
+    - name: Run Playwright Setup (auth.setup.ts)
+      run: npm run auth-setup
+    - name: Run Playwright Test - ${{ matrix.test-name }}
+      id: playwright-tests
+      run: npm run ${{ matrix.test-name }}
+    - name: Upload Playwright Report
+      uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
+        retention-days: 30
+    - name: Upload Lighthouse Report
+      if: matrix.test-name == 'performance-test'
+      uses: actions/upload-artifact@v4
+      with:
+        name: lighthouse-report
+        path: lighthouse-report/
         retention-days: 30
