--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,7 +10,7 @@ env:
     SAUCE_LOCKED_USERNAME: ${{ secrets.SAUCE_LOCKED_USERNAME }}
     SAUCE_PASSWORD: ${{ secrets.SAUCE_PASSWORD }}
 jobs:
-  functional-tests:
+  functional-test:
     name: Functional Tests
     timeout-minutes: 60
     runs-on: ubuntu-latest
@@ -45,27 +45,4 @@ jobs:
       with:
         name: playwright-report-${{ matrix.test-name }}
         path: playwright-report/
-        retention-days: 30
-  performance-test:
-    name: Performance Test (Lighthouse)
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    needs: functional-tests
-    continue-on-error: true
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Performance Test
-      run: npm run performance-test
-    - name: Upload Lighthouse Report
-      uses: actions/upload-artifact@v4
-      with:
-        name: lighthouse-report
-        path: lighthouse-report/
         retention-days: 30
